--- a/templates/upload.html
+++ b/templates/upload.html
@@ -8,9 +8,11 @@
 </head>
 
 <body>
-    <form action="http://localhost:5000/uploader" method="POST" enctype="multipart/form-data">
-        <input type="file" name="file" />
-        <input type="submit" />
+    <title>Upload new File</title>
+    <h1>Upload new File</h1>
+    <form action="" method=post enctype=multipart/form-data>
+      <p><input type=file name=file>
+         <input type=submit value=Upload>
     </form>
 </body>
 
