--- a/templates/download.html
+++ b/templates/download.html
@@ -1,10 +1,8 @@
 <!doctype html>
-<title>Python Flask File Download Example</title>
-<h2>Download a file</h2>
+<title>Canvas Sketcher</title>
 
 <p>
-	<title>Download File</title>
-  <h1>Download File</h1>
+  <h1>Download your Sketch</h1>
   <body class="body">
      <div class="container" align = "left">
       <a href="/return-files/{{value}}" target="blank"><button class='btn btn-default'>Download</button></a>
