--- a/templates/upload.html
+++ b/templates/upload.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Canvas Sketcher</title>
 </head>
 
 <body>
-    <title>Upload new File</title>
-    <h1>Upload new File</h1>
+    <h1>Upload Image you want to convert to sketch</h1>
     <form action="" method=post enctype=multipart/form-data>
       <p><input type=file name=file>
          <input type=submit value=Upload>
